ipfs/config/ipfs_deployment.yaml
# Reference: https://kind.sigs.k8s.io/docs/user/ingress/
# Reference: https://kubernetes.io/docs/concepts/services-networking/ingress/

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaordicledger-ipfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipfs-app
  template:
    metadata:
      labels:
        app: ipfs-app
    spec:
      containers:
        - name: ipfs-app
          image: ipfs/go-ipfs:v0.7.0
          ports:
            - containerPort: 8080
            - containerPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaordicledger-foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
        - name: foo-app
          image: hashicorp/http-echo:0.2.3
          args:
          - "-text=foo"
          ports:
            - containerPort: 5678

# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: chaordicledger-ipfs-env
#   namespace: chaordicledger
# data:
#   ORDERER_ADMIN_LISTENADDRESS: 0.0.0.0:9443
